Not shrink message center after returning from settings panel.

Message center is required to not resize after returning to settings
panel.
Previously, the height was sometimes shrinking, while sometimes not,
depending on event timing.

TEST=manual
BUG=767805

Change-Id: Ic1594f142f8dc9e4f88a69bfddd1f2598c2a0ab1
Reviewed-on: https://chromium-review.googlesource.com/681095
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Reviewed-by: James Cook <jamescook@chromium.org>
Commit-Queue: Tetsui Ohkubo <tetsui@chromium.org>
Cr-Commit-Position: refs/heads/master@{#504272}
Former-commit-id: 8833b1eae41404f3634e01b3281e53b5903237ad